Migrate TPS client to flexible project layout.

--- a/tps-example/workers/tps-client/Code/Game/CMakeLists.txt
+++ b/tps-example/workers/tps-client/Code/Game/CMakeLists.txt
@@ -120,30 +120,25 @@ endif()
 
 #BEGIN-CUSTOM
 # Make any custom changes here, modifications outside of the block will be discarded on regeneration.
+
+# Disable warnings as error, as we're getting C2220 "no 'object' file generated".
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX-")
+
 get_filename_component(BASE_PATH ${PROJECT_SOURCE_DIR}/../../../../ REALPATH)
 get_filename_component(GEN_CODE_PATH ${PROJECT_SOURCE_DIR}/../Generated/ REALPATH)
 
-add_custom_target(spatial_codegen_std
-				  COMMAND spatial process_schema generate --cachePath="${BASE_PATH}/workers/tps-client/.spatialos/schema_codegen_cache_std" --output="${PROJECT_SOURCE_DIR}/../Generated/std" --language=cpp --input="${BASE_PATH}/build/dependencies/schema/standard_library"
-)
-add_custom_target(spatial_codegen_usr
-					COMMAND spatial process_schema generate --cachePath="${BASE_PATH}/workers/tps-client/.spatialos/schema_codegen_cache_usr" --output="${PROJECT_SOURCE_DIR}/../Generated/usr" --language=cpp --input="${BASE_PATH}/schema" --dependency="${BASE_PATH}/build/dependencies/schema/standard_library"
-)
-
-add_custom_target(spatial_codegen_json
-					COMMAND spatial process_schema generate --cachePath="${BASE_PATH}/workers/tps-client/.spatialos/schema_codegen_cache_json" --output="${PROJECT_SOURCE_DIR}/../Generated/json" --language=ast_json
+add_custom_target(spatial_codegen_all
+				  COMMAND bash ${BASE_PATH}/codegen.sh
 )
 
 add_custom_target(codegen_components
 					COMMAND java -jar ${BASE_PATH}/../tools/ComponentGenerator/output/ComponentGenerator-1.0.jar "${BASE_PATH}/workers/tps-client/Code/Generated/json" "${BASE_PATH}/workers/tps-client/Code/Game/Generated" "${BASE_PATH}/workers/tps-client/guids/"
 )
 
-# execute_process(COMMAND spatial process_schema generate "--cachePath=${BASE_PATH}/workers/tps-client/.spatialos/schema_codegen_cache_std" "--output=${GEN_CODE_PATH}/std" --language=cpp "--input=${BASE_PATH}/build/dependencies/schema/standard_library")
-# execute_process(COMMAND spatial process_schema generate "--cachePath=${BASE_PATH}/workers/tps-client/.spatialos/schema_codegen_cache_usr" "--output=${GEN_CODE_PATH}/usr" --language=cpp "--input=${BASE_PATH}/schema")
 execute_process(COMMAND java -jar ${BASE_PATH}/../tools/ComponentGenerator/output/ComponentGenerator-1.0.jar "${BASE_PATH}/workers/tps-client/Code/Generated/json" "${BASE_PATH}/workers/tps-client/Code/Game/Generated" "${BASE_PATH}/workers/tps-client/guids/")
 add_library(spatial_codegen STATIC "")
 set_target_properties(spatial_codegen PROPERTIES LINKER_LANGUAGE CXX)
-add_dependencies(spatial_codegen spatial_codegen_std spatial_codegen_usr spatial_codegen_json)
+add_dependencies(spatial_codegen spatial_codegen_all)
 add_dependencies(codegen_components spatial_codegen)
 if (CMAKE_CL_64 AND WIN32)
     if(_DEBUG)
